--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,6 +6,15 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Segoe UI", Arial, sans-serif;
+  color: #2e2e2e;
+}
+
+body.dark {
+  background-color: #2e2e2e;
+}
+.dark h1,
+.dark p {
+  color: #ffffff;
 }
 
 main {
@@ -19,61 +28,95 @@ a {
   text-decoration: none;
 }
 
+.dark a {
+  color: lightskyblue;
+}
+
+#theme-switch {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  cursor: pointer;
+  font-weight: 700;
+  color: #2e2e2e;
+  user-select: none;
+  transition: transform 0.25s;
+}
+
+#theme-switch:hover {
+  transform: scale(1.1);
+}
+
+#theme-switch-checkbox {
+  display: none;
+}
+
+.dark #theme-switch {
+  filter: invert(85%) sepia(30%) saturate(643%) hue-rotate(335deg)
+    brightness(104%) contrast(102%);
+}
+
 .link-icon {
   width: 64px;
   aspect-ratio: 1;
 }
 
-#formShort,
-#formLong {
+body.dark #theme-switch {
+  color: #ffffff;
+}
+
+.form {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 0.5rem;
 }
 
-#inputLongUrl,
-#inputUrl,
-#buttonLong,
-#button {
+.input,
+.button {
   border-radius: 0;
   border: 0;
   width: 80%;
   padding: 0.5rem 1rem;
-  border: 1px solid #ccc;
   border-radius: 5rem;
 }
 
-#button,
-#buttonLong {
+.input {
+  border: 1px solid #ccc;
+}
+
+body.dark .input {
+  color: #ffffff;
+  background-color: #4e4e4e;
+  border: 1px solid #6e6e6e;
+}
+
+.button {
   background-color: #00b7ff;
   color: white;
   font-weight: 900;
   cursor: pointer;
 }
-#shortLinkBtn,
-#longLinkBtn {
-  display: inline;
-  border:none;
-  padding:0;
-  background-color: transparent;
-  cursor: pointer;
+.dark .button {
+  background-color: lightskyblue;
 }
-#result,
-#resultLong{
-  display:flex;
+
+.result {
+  word-wrap: break-word;
+  display: flex;
   flex-direction: column;
 }
-#formLong button:hover .text-anim {
+
+.button.long:hover .text-anim {
   animation: text 1.5s linear forwards;
 }
 
-#formLong button:hover {
+.button.long:hover {
   background: linear-gradient(90deg, pink, pink 5%, #00b7ff 5%);
   animation: addpenis 1.5s linear forwards;
 }
 
-#formLong button:hover .line {
+.button.long:hover .line {
   width: 3%;
   position: relative;
   top: 10px;
@@ -83,8 +126,13 @@ a {
   margin: -1px;
 }
 
-#resultLong{
-  word-wrap: break-word;
+#shortLinkBtn,
+#longLinkBtn {
+  display: inline;
+  border: none;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 @keyframes addpenis {
